# VCFLite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  test.sh
include/vcflite/: connect.hpp  create.hpp  populate.hpp  query.hpp  select.hpp
src/: connect.cpp  create.cpp  populate.cpp  vcflite.cpp
